--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
     "d3": "^7.8.5",
+    "framer-motion": "^11.0.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
