--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
