--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.74.0",
     "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
     "lucide-react": "^0.544.0",
