--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "d3": "^7.8.5",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.9.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
