--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^8.0.0",
     "@supabase/supabase-js": "^2.74.0",
     "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
