adds ai assistant

--- a/package.json
+++ b/package.json
@@ -10,14 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.48",
     "@stripe/stripe-js": "^8.0.0",
     "@supabase/supabase-js": "^2.74.0",
+    "ai": "^5.0.68",
     "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.3"
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.9.3",
+    "remark-gfm": "^4.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
