--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ai": "^5.0.68",
     "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
+    "flows-ai": "^0.4.0",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
