Disable JWT verification for stripe-webhook Edge Function
Problem: Stripe webhooks failing with 401 'Missing authorization header'
Root cause: Edge Function requiring JWT auth for webhook calls from Stripe

Solution: Added verify_jwt = false to config.toml for stripe-webhook function
- Stripe webhooks use signature-based authentication (stripe-signature header)
- Not JWT-based like authenticated API calls
- Function already validates webhook signature using STRIPE_WEBHOOK_SECRET

This allows Stripe to successfully send webhook events for:
- customer.subscription.created
- customer.subscription.updated
- customer.subscription.deleted
- invoice.payment_succeeded
- invoice.payment_failed

Webhooks will now properly update subscription status in database

--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -4,3 +4,7 @@
 # Google OAuth callback - must be publicly accessible (Google redirects without JWT)
 [functions.google-oauth-callback]
 verify_jwt = false
+
+# Stripe webhook - must be publicly accessible (Stripe sends webhooks without JWT)
+[functions.stripe-webhook]
+verify_jwt = false
