--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
     "fuse.js": "^7.1.0",
+    "immer": "^10.1.3",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
