--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
     "fuse.js": "^7.1.0",
+    "i18next": "^25.6.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "immer": "^10.1.3",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
     "remark-gfm": "^4.0.1",
