--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "ai": "^5.0.68",
     "canvas2svg": "^1.0.16",
     "d3": "^7.8.5",
+    "driver.js": "^1.3.6",
     "fuse.js": "^7.1.0",
     "i18next": "^25.6.0",
     "i18next-browser-languagedetector": "^8.2.0",
