--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss": "^8.5.6",
     "sass": "^1.70.0",
     "tailwindcss": "^3",
+    "terser": "^5.44.0",
     "vite": "^5.0.8"
   }
 }
