--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "sass": "^1.70.0",
     "tailwindcss": "^3",
     "terser": "^5.44.0",
-    "vite": "^5.0.8"
+    "vite": "^5.0.8",
+    "vite-plugin-inline-css-modules": "^0.0.8"
   }
 }
