adds xls and sheet export

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
     "remark-gfm": "^4.0.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.23.8"
   },
   "devDependencies": {
