moves admin components to separate namespace adds forecasts module

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-i18next": "^16.0.0",
     "react-markdown": "^10.1.0",
     "react-router-dom": "^7.9.3",
+    "recharts": "^3.3.0",
     "remark-gfm": "^4.0.1",
     "xlsx": "^0.18.5",
     "zod": "^3.23.8"
