--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.74.0",
     "ai": "^5.0.68",
     "canvas2svg": "^1.0.16",
+    "chart.js": "^4.5.1",
     "d3": "^7.8.5",
     "driver.js": "^1.3.6",
     "fuse.js": "^7.1.0",
@@ -24,6 +25,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^16.0.0",
     "react-markdown": "^10.1.0",
