adds commenting functionality to activities and to the wheel with mention of team members if needed

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^16.0.0",
     "react-markdown": "^10.1.0",
+    "react-mentions": "^4.4.10",
     "react-router-dom": "^7.9.3",
     "remark-gfm": "^4.0.1",
     "xlsx": "^0.18.5",
