Add hybrid tracking: client-side + server-side GA4 purchase events

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ VITE_STRIPE_MONTHLY_PRICE_ID=your-monthly-price-id
 VITE_STRIPE_YEARLY_PRICE_ID=your-yearly-price-id
 STRIPE_SECRET_KEY=your-stripe-secret-key
 STRIPE_WEBHOOK_SECRET=your-webhook-secret
+
+# Google Analytics 4 (for server-side tracking)
+GA4_MEASUREMENT_ID=G-89PHB9R4XE
+GA4_API_SECRET=your-ga4-api-secret
