--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "canvas2svg": "^1.0.16",
     "chart.js": "^4.5.1",
     "d3": "^7.8.5",
+    "dompurify": "^3.3.0",
     "driver.js": "^1.3.6",
     "fuse.js": "^7.1.0",
     "i18next": "^25.6.0",
@@ -25,6 +26,7 @@
     "immer": "^10.1.3",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
+    "marked": "^16.4.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
@@ -38,6 +40,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/dompurify": "^3.2.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react-swc": "^3.5.0",
