--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "marked": "^16.4.1",
+    "qrcode": "^1.5.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
