WIP e2e test for team invite

--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "postbuild": "node scripts/prerender.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives",
     "preview": "vite preview",
-    "cy:open": "cypress open",
+    "cy:open": "cypress open --e2e -b chrome",
     "cy:run": "cypress run",
     "cy:open:component": "cypress open --component",
-    "cy:run:component": "cypress run --component"
+    "cy:run:component": "cypress run --component",
+    "cy:dev": "start-server-and-test dev http://localhost:5173 cy:open",
+    "cy:test": "start-server-and-test dev http://localhost:5173 cy:run"
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.48",
@@ -52,12 +54,15 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.21",
     "cypress": "^13.13.1",
+    "dotenv": "^17.2.3",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.6",
     "sass": "^1.70.0",
+    "start-server-and-test": "^2.1.2",
+    "superstatic": "^10.0.0",
     "tailwindcss": "^3",
     "terser": "^5.44.0",
     "vite": "^5.0.8",
