--- a/package.json
+++ b/package.json
@@ -55,11 +55,13 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.21",
     "cypress": "^13.13.1",
+    "cypress-recurse": "^1.37.1",
     "dotenv": "^17.2.3",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "odiff-bin": "^4.1.1",
     "postcss": "^8.5.6",
     "sass": "^1.70.0",
     "start-server-and-test": "^2.1.2",
