--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^2.0.48",
+    "@h6s/calendar": "^2.0.3",
     "@react-email/components": "^1.0.0",
     "@react-email/render": "^2.0.0",
     "@stripe/stripe-js": "^8.0.0",
@@ -26,6 +27,7 @@
     "canvas2svg": "^1.0.16",
     "chart.js": "^4.5.1",
     "d3": "^7.8.5",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
     "driver.js": "^1.3.6",
     "fuse.js": "^7.1.0",
