--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,8 @@ STRIPE_WEBHOOK_SECRET=your-webhook-secret
 # Google Analytics 4 (for server-side tracking)
 GA4_MEASUREMENT_ID=G-89PHB9R4XE
 GA4_API_SECRET=your-ga4-api-secret
+# Monday.com Integration
+# Client ID and App ID are public (used in OAuth URLs)
+# Set these in Supabase Dashboard → Edge Functions → Secrets:
+MONDAY_CLIENT_SECRET=your-monday-client-secret-here
+MONDAY_SIGNING_SECRET=your-monday-signing-secret-here
