--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "odiff-bin": "^4.1.1",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "sass": "^1.70.0",
     "start-server-and-test": "^2.1.2",
     "superstatic": "^10.0.0",
