Add app icon generation script with all standard sizes

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postbuild": "node scripts/prerender.js",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives",
     "preview": "vite preview",
+    "generate:icons": "node scripts/generate-app-icons.js",
     "cy:open": "cypress open --e2e -b chrome",
     "cy:run": "cypress run",
     "cy:open:component": "cypress open --component",
@@ -70,6 +71,7 @@
     "postcss": "^8.5.6",
     "rollup-plugin-visualizer": "^6.0.5",
     "sass": "^1.70.0",
+    "sharp": "^0.34.5",
     "start-server-and-test": "^2.1.2",
     "superstatic": "^10.0.0",
     "tailwindcss": "^3",
