--- a/netlify.toml
+++ b/netlify.toml
@@ -25,6 +25,18 @@
     # Permissions Policy for security
     Permissions-Policy = "geolocation=(), microphone=(), camera=()"
 
+# Special headers for Monday.com how-to page (iframe embeddable)
+[[headers]]
+  for = "/monday/how-to"
+  [headers.values]
+    # Allow embedding in Monday.com iframes
+    Content-Security-Policy = "frame-ancestors 'self' https://*.monday.com"
+    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+    Access-Control-Allow-Origin = "https://*.monday.com"
+    Cache-Control = "public, max-age=3600"
+
 # Cache static assets for 1 year
 [[headers]]
   for = "/assets/*"
