--- a/netlify.toml
+++ b/netlify.toml
@@ -29,12 +29,13 @@
 [[headers]]
   for = "/monday/how-to"
   [headers.values]
-    # Allow embedding in Monday.com iframes
-    Content-Security-Policy = "frame-ancestors 'self' https://*.monday.com"
+    # Allow embedding in any iframe (required for Monday.com marketplace and testing)
+    # This is safe for documentation/how-to content
+    Content-Security-Policy = "frame-ancestors *"
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Access-Control-Allow-Origin = "https://*.monday.com"
+    Access-Control-Allow-Origin = "*"
     Cache-Control = "public, max-age=3600"
 
 # Cache static assets for 1 year
