--- a/package.json
+++ b/package.json
@@ -74,7 +74,7 @@
     "sharp": "^0.34.5",
     "start-server-and-test": "^2.1.3",
     "superstatic": "^10.0.0",
-    "tailwindcss": "^4.1.18",
+    "tailwindcss": "3.4.17",
     "terser": "^5.44.1",
     "vite": "^7.3.0",
     "vite-plugin-inline-css-modules": "^0.0.8"
