adds useCalendar hook and removed incompatible package

--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.2",
-    "@h6s/calendar": "^2.0.3",
     "@react-email/components": "^1.0.3",
     "@react-email/render": "^2.0.1",
     "@stripe/stripe-js": "^8.6.0",
@@ -40,9 +39,9 @@
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
-    "react": "^19.2.3",
+    "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
-    "react-dom": "^19.2.3",
+    "react-dom": "19.2.3",
     "react-i18next": "^16.5.1",
     "react-markdown": "^10.1.0",
     "react-mentions": "^4.4.10",
@@ -55,8 +54,8 @@
     "@faker-js/faker": "^10.2.0",
     "@tailwindcss/typography": "^0.5.19",
     "@types/dompurify": "^3.2.0",
-    "@types/react": "^19.2.7",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@vitejs/plugin-react-swc": "^4.2.2",
     "autoprefixer": "^10.4.23",
     "baseline-browser-mapping": "^2.9.11",
