--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "dompurify": "^3.3.1",
     "driver.js": "^1.4.0",
     "fuse.js": "^7.1.0",
+    "handlebars": "^4.7.8",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.14.0",
     "i18next": "^25.7.3",
     "i18next-browser-languagedetector": "^8.2.0",
     "immer": "^11.1.3",
