--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "driver.js": "^1.4.0",
     "fuse.js": "^7.1.0",
     "handlebars": "^4.7.8",
+    "html-react-parser": "^5.2.11",
     "html2canvas": "^1.4.1",
     "html2pdf.js": "^0.14.0",
     "i18next": "^25.7.3",
