--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "dompurify": "^3.3.1",
     "driver.js": "^1.4.0",
     "fuse.js": "^7.1.0",
+    "grapesjs": "^0.22.14",
+    "grapesjs-preset-webpage": "^1.0.3",
     "handlebars": "^4.7.8",
     "html-react-parser": "^5.2.11",
     "html2canvas": "^1.4.1",
