Replace GrapesJS with TipTap visual mode in existing editor

--- a/package.json
+++ b/package.json
@@ -21,10 +21,20 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.2",
+    "@floating-ui/dom": "^1.7.4",
     "@react-email/components": "^1.0.3",
     "@react-email/render": "^2.0.1",
     "@stripe/stripe-js": "^8.6.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@tiptap/core": "^3.15.3",
+    "@tiptap/extension-color": "^3.15.3",
+    "@tiptap/extension-highlight": "^3.15.3",
+    "@tiptap/extension-text-align": "^3.15.3",
+    "@tiptap/extension-text-style": "^3.15.3",
+    "@tiptap/extension-underline": "^3.15.3",
+    "@tiptap/pm": "^3.15.3",
+    "@tiptap/react": "^3.15.3",
+    "@tiptap/starter-kit": "^3.15.3",
     "ai": "^6.0.6",
     "canvas2svg": "^1.0.16",
     "chart.js": "^4.5.1",
@@ -33,8 +43,6 @@
     "dompurify": "^3.3.1",
     "driver.js": "^1.4.0",
     "fuse.js": "^7.1.0",
-    "grapesjs": "^0.22.14",
-    "grapesjs-preset-webpage": "^1.0.3",
     "handlebars": "^4.7.8",
     "html-react-parser": "^5.2.11",
     "html2canvas": "^1.4.1",
