--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "jspdf": "^4.0.0",
     "lucide-react": "^0.562.0",
     "marked": "^17.0.1",
+    "prismjs": "^1.30.0",
     "react": "19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.3",
@@ -60,6 +61,7 @@
     "react-markdown": "^10.1.0",
     "react-mentions": "^4.4.10",
     "react-router-dom": "^7.11.0",
+    "react-simple-code-editor": "^0.14.1",
     "remark-gfm": "^4.0.1",
     "xlsx": "^0.18.5",
     "zod": "^4.3.5"
