--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-router-dom": "^7.11.0",
     "react-simple-code-editor": "^0.14.1",
     "remark-gfm": "^4.0.1",
+    "tiptap-extension-global-drag-handle": "^0.1.18",
     "xlsx": "^0.18.5",
     "zod": "^4.3.5"
   },
